# gdscript-lsp

./: .gitignore  Cargo.toml
.github/workflows/: develop.yml  main.yml
crates/api-db/: Cargo.toml
crates/api-db/src/: db.rs  error.rs  lib.rs  types.rs
crates/checker/: Cargo.toml
crates/checker/src/: diagnostics.rs  lib.rs  linting.rs  resolver.rs  syntax.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: check.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  location.rs  symbol.rs  types.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: error.rs  index.rs  lib.rs  project_godot.rs  scene.rs  watcher.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: backend.rs  call_checker.rs  capabilities.rs  code_actions.rs  completion.rs  diagnostics.rs  document_store.rs  formatting.rs  goto_def.rs  hover.rs  inlay_hints.rs  lib.rs  signature_help.rs  text_util.rs  type_check.rs  type_resolver.rs  type_util.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  parse.rs  symbol_table.rs
editors/vscode/: .vscodeignore  LICENSE  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: gdscript.tmLanguage.json
