[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parser",
    "crates/api-db",
    "crates/indexer",
    "crates/checker",
    "crates/lsp",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Peter Chau <peter.chau.esq@gmail.com>"]
license = "MIT"
repository = "https://github.com/PeterChauYEG/gdscript-lsp"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# LSP protocol — lsp-types is re-exported by tower-lsp, do not add separately
tower-lsp = "0.20"

# parsing
tree-sitter = "0.24"
tree-sitter-gdscript = "6.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# file watching
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

# concurrency
dashmap = "6"

# diffing (for formatting)
similar = "2"

# URL handling
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
