[package]
name = "gdscript-core"
description = "Core types and utilities for gdscript-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
url = { workspace = true }
