[package]
name = "gdscript-indexer"
description = "Project-wide file indexer — class registry, scene parser, file watching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdscript-core = { path = "../core" }
gdscript-parser = { path = "../parser" }
gdscript-api-db = { path = "../api-db" }
tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
